# MacOSLibraryDependencies

./: CMakeLists.txt  README.md  conan.cmake  conanfile.txt
include/: file_system.h  librarytools.h  process.h  string_utils.h
src/: _main_.cpp  librarytools.cpp  main_bundle.cpp  main_standalone.cpp
